# async-python-sprint-4

./: .env.template  README.md  pyproject.toml  setup.cfg
src/: main.py  models.py
src/api/v1/: base.py  history.py  request_for_short.py  url.py
src/config/: config.py  logger.py
src/db/: db.py
src/middleware/: blocked_host.py
src/migrations/: env.py
src/migrations/versions/: 2023_01_13_1952-ab0a36c895a0_init.py  2023_01_14_0111-6498563ed779_init.py
src/models/: base_model.py  user_model.py
src/schemes/: base_scheme.py  history_scheme.py  urls_scheme.py
src/services/: base_service.py  history_service.py  request_service.py  url_service.py
src/tests/: conftest.py  test_api.py
