[tool.poetry]
name = "async-python-sprint-4"
version = "0.1.0"
description = ""
authors = ["Pavel Korsakov <PKorsakov@datafort.ru>"]
readme = "README.md"
#packages = [{include = "async_python_sprint_4"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
orjson = "^3.8.5"
sqlalchemy = {extras = ["mypy"], version = "^1.4.46"}
sqlalchemy-utils = "^0.39.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
databases = {extras = ["postgresql"], version = "^0.7.0"}
alembic = "^1.9.1"
flake8 = "^6.0.0"
mypy = "^0.991"
fastapi-auth-middleware = "^1.0.2"
sqlalchemy-stubs = "^0.4"
isort = "^5.11.4"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
pytest-httpx = "^0.21.2"
trio = "^0.22.0"
pytest-trio = "^0.8.0"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = "tests/|venv/|migrations/"
